# qr-generator-backend

./: pyproject.toml
QRcode/: app.py  app_main.py  main.py
QRcode/templates/: index.html
